# the-enlightened-cat

./: .env  .env_example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION.md  README.md  RUST-ECOSYSTEM.md  The-Enlightened-Cat-reflections.md  copy-from-clipboard.md  deploy.sh  possible-ehancement-currenct-collapse.md  quantum-kitties-miauw-miauw.md  setup_local_dev.sh  the-entangled-cat.md.py
.github/workflows/: deploy.yml
docs/: DEVELOPMENT.md  HOW_IT_WORKS.md  README.md  qcat-visualization-roadmap.md  the-entangled-cat.md
nginx/: enlightened-cat-local-updated.conf  enlightened-cat-local.conf  enlightened-cat-production-dev.conf  enlightened-cat-vps-dev.conf  enlightened-cat.conf
src/: config.rs  main.rs  mistral.rs  quantum.rs  quantum_field.rs  state.rs
src/routes/: chat.rs  mod.rs  pages.rs  quantum.rs  quantum_field.rs  wisdom.rs
src/templates/: mod.rs
static/css/: linkedin-share.css  styles.css
static/images/: enlightened-cat-logo.png.placeholder
static/js/: linkedin-share.js  main.js
static/sounds/: README.md
systemd/: enlightened-cat-local.service  enlightened-cat.service
templates/: about.html  base.html  index.html  quantum_field.html  quantum_wisdom.html  wisdom.html
